--- a/index.html
+++ b/index.html
@@ -7,9 +7,33 @@
   <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
+  <!-- navigation bar with logo and other links -->
+  <section id="nav-bar">
+    
+  </section>
   <!-- Main header with links and logo, link to social media -->
   <section id="hero">
-    
+    <div class="row">
+      <div id="hero-nav">
+        <span>logo goes here</span>
+        <nav>
+          <ul id="nav-links">
+            <li>Industry Data</li>
+            <li>Selling Points</li>
+            <li>Explanation</li>
+            <li>Team</li>
+            <li>As Seen On</li>
+            <li>Contact Us</li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <div class="row">
+      <header>
+        <h1>The premier showcase theme</h1>
+        <h2>We support clients to design digital experiences for their products</h2>
+      </header>
+    </div>
   </section>
   <!-- graphs and charts on where the charitee industry/fund raising is headed -->
   <section id="industry-data">
